crates/monochange/src/__tests__/snapshots/monochange__tests__sync_tests__format_sync_result_dry_run_says_what_would_change.snap
---
source: crates/monochange/src/__tests__/sync_tests.rs
expression: output
---
• Would update 1 dependency constraint · in 1 file · strategy default · dry-run, no files were modified

pubspec.yaml
  my_package  ^0.5.0 → ^0.7.0

Strategy order: package config → ecosystem config → ecosystem default; `--strategy` overrides.
