crates/monochange/src/__tests__/snapshots/monochange__tests__sync_tests__format_sync_result_groups_updates_by_relative_file.snap
---
source: crates/monochange/src/__tests__/sync_tests.rs
expression: output
---
✔ Updated 1 dependency constraint · in 1 file · strategy default

pubspec.yaml
  my_package  ^0.5.0 → ^0.7.0

Strategy order: package config → ecosystem config → ecosystem default; `--strategy` overrides.
