crates/monochange/src/__tests__/snapshots/monochange__tests__sync_tests__syncing_deno_jsonc_preserves_comments_and_trailing_commas.snap
---
source: crates/monochange/src/__tests__/sync_tests.rs
expression: updated
---
// Internal dependencies
{
  "name": "app",
  "version": "1.0.0",
  "dependencies": {
    /* Keep this explanation. */
    "core": "^2.0.0",
  },
}
